[tool.poetry]
name = "monitor-api-mikrotik"
version = "0.1.0"
description = ""
authors = ["juliocesarbiz <49292963+juliocesarbiz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
requests = "^2.31.0"
datetime = "^5.2"
schedule = "^1.2.1"
urllib3 = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
